@@ -35,7 +35,7 @@ centralityPlot <- function(..., labels, scale = c("z-scores", "raw", "raw0","rel
   ## programming is bad and I fo feel bad.
   
   Long <- centralityTable(..., standardized=standardized, labels=labels, relative=relative, weighted = weighted, signed = signed)
-  
+
   # If not missing, include only include vars:
   # if (!missing(include))
   # {
